# openpilot-ui

./: .gitignore  README.md  SConstruct  pyproject.toml
cereal/messaging/: bridge
msgq/: event.os  impl_fake.os  impl_msgq.os  ipc.os  msgq.os
msgq/visionipc/: visionbuf.os  visionipc.os  visionipc_client.os  visionipc_server.os
openpilot/: __init__.py
openpilot/selfdrive/mock/: __init__.py  data_simulator.py  mock_camerad.py  mock_card.py  mock_modeld.py  mock_selfdrive.py  mock_sensord.py
openpilot/selfdrive/ui/layouts/: sidebar.py
openpilot/tools/sim/: run_ui.py
workspace/: TODO
