[project]
name = "openpilot-ui"
version = "0.1.0"
description = "Standalone UI application extracted from openpilot"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Based on openpilot by comma.ai"}
]
dependencies = [
    "raylib >= 5.5.0.3",
    "numpy >= 1.24",
    "pycapnp >= 1.1.0",
    "pillow",
    "cffi",
    "setproctitle",
    "requests",
    "pyjwt",
    "qrcode",
    "jeepney",
    "pyserial",
    "pyzmq",
    "zstandard",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]
camera = [
    "opencv-python",
]

[project.scripts]
openpilot-ui = "openpilot.tools.sim.run_ui:main"
openpilot-mock = "openpilot.selfdrive.mock.data_simulator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openpilot", "cereal", "msgq", "opendbc"]

[tool.ruff]
line-length = 160
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]